# citations-app

./: .gitignore  README.md  citation_app.py  citation_finder.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
experimental/: citation_finder_experimental.py  citation_finder_experimental_notebook.ipynb
experimental/.ipynb_checkpoints/: citation_finder_experimental_notebook-checkpoint.ipynb
notebooks/: citation_finder_lenient_notebook.ipynb  citation_finder_medium_notebook.ipynb  citation_finder_moderate_notebook.ipynb  citation_finder_nou_stmeld_prop_notebook.ipynb  citation_finder_open_notebook.ipynb  citation_finder_semi_strict_notebook.ipynb  citation_finder_strict_notebook.ipynb
py-scripts/: citation_finder_lenient.py  citation_finder_medium.py  citation_finder_moderate.py  citation_finder_nou_stmeld_prop.py  citation_finder_open.py  citation_finder_semi_strict.py  citation_finder_strict.py
