[tool.poetry]
name = "citation-finder"
version = "0.1.0"
description = ""
authors = ["Marie Røsok <marie.rosok@nb.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dhlab = { version = "^2.30.0", python = "<3.13" }
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
